Variable Length Quantity: cleanup