@@ -9,29 +9,29 @@ import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 
 public class VariableLengthQuantityTest {
 
-    private VariableLengthQuantity variableLengthQuantity =
+    private final VariableLengthQuantity variableLengthQuantity =
         new VariableLengthQuantity();
 
     @Test
     public void testZero() {
-        List<String> expected = Arrays.asList("0x0");
-        List<Long> numbers = Arrays.asList(0x0L);
+        List<String> expected = List.of("0x0");
+        List<Long> numbers = List.of(0x0L);
 
         assertThat(variableLengthQuantity.encode(numbers)).isEqualTo(expected);
     }
 
     @Test
     public void testArbitrarySingleByte() {
-        List<String> expected = Arrays.asList("0x40");
-        List<Long> numbers = Arrays.asList(0x40L);
+        List<String> expected = List.of("0x40");
+        List<Long> numbers = List.of(0x40L);
 
         assertThat(variableLengthQuantity.encode(numbers)).isEqualTo(expected);
     }
 
     @Test
     public void testLargestSingleByte() {
-        List<String> expected = Arrays.asList("0x7f");
-        List<Long> numbers = Arrays.asList(0x7fL);
+        List<String> expected = List.of("0x7f");
+        List<Long> numbers = List.of(0x7fL);
 
         assertThat(variableLengthQuantity.encode(numbers)).isEqualTo(expected);
     }
@@ -39,7 +39,7 @@ public class VariableLengthQuantityTest {
     @Test
     public void testSmallestDoubleByte() {
         List<String> expected = Arrays.asList("0x81", "0x0");
-        List<Long> numbers = Arrays.asList(0x80L);
+        List<Long> numbers = List.of(0x80L);
 
         assertThat(variableLengthQuantity.encode(numbers)).isEqualTo(expected);
     }
@@ -47,7 +47,7 @@ public class VariableLengthQuantityTest {
     @Test
     public void testArbitraryDoubleByte() {
         List<String> expected = Arrays.asList("0xc0", "0x0");
-        List<Long> numbers = Arrays.asList(0x2000L);
+        List<Long> numbers = List.of(0x2000L);
 
         assertThat(variableLengthQuantity.encode(numbers)).isEqualTo(expected);
     }
@@ -55,7 +55,7 @@ public class VariableLengthQuantityTest {
     @Test
     public void testLargestDoubleByte() {
         List<String> expected = Arrays.asList("0xff", "0x7f");
-        List<Long> numbers = Arrays.asList(0x3fffL);
+        List<Long> numbers = List.of(0x3fffL);
 
         assertThat(variableLengthQuantity.encode(numbers)).isEqualTo(expected);
     }
@@ -63,7 +63,7 @@ public class VariableLengthQuantityTest {
     @Test
     public void testSmallestTripleByte() {
         List<String> expected = Arrays.asList("0x81", "0x80", "0x0");
-        List<Long> numbers = Arrays.asList(0x4000L);
+        List<Long> numbers = List.of(0x4000L);
 
         assertThat(variableLengthQuantity.encode(numbers)).isEqualTo(expected);
     }
@@ -71,7 +71,7 @@ public class VariableLengthQuantityTest {
     @Test
     public void testArbitraryTripleByte() {
         List<String> expected = Arrays.asList("0xc0", "0x80", "0x0");
-        List<Long> numbers = Arrays.asList(0x100000L);
+        List<Long> numbers = List.of(0x100000L);
 
         assertThat(variableLengthQuantity.encode(numbers)).isEqualTo(expected);
     }
@@ -79,7 +79,7 @@ public class VariableLengthQuantityTest {
     @Test
     public void testLargestTripleByte() {
         List<String> expected = Arrays.asList("0xff", "0xff", "0x7f");
-        List<Long> numbers = Arrays.asList(0x1fffffL);
+        List<Long> numbers = List.of(0x1fffffL);
 
         assertThat(variableLengthQuantity.encode(numbers)).isEqualTo(expected);
     }
@@ -87,7 +87,7 @@ public class VariableLengthQuantityTest {
     @Test
     public void testSmallestQuadrupleByte() {
         List<String> expected = Arrays.asList("0x81", "0x80", "0x80", "0x0");
-        List<Long> numbers = Arrays.asList(0x200000L);
+        List<Long> numbers = List.of(0x200000L);
 
         assertThat(variableLengthQuantity.encode(numbers)).isEqualTo(expected);
     }
@@ -95,7 +95,7 @@ public class VariableLengthQuantityTest {
     @Test
     public void testArbitraryQuadrupleByte() {
         List<String> expected = Arrays.asList("0xc0", "0x80", "0x80", "0x0");
-        List<Long> numbers = Arrays.asList(0x8000000L);
+        List<Long> numbers = List.of(0x8000000L);
 
         assertThat(variableLengthQuantity.encode(numbers)).isEqualTo(expected);
     }
@@ -103,7 +103,7 @@ public class VariableLengthQuantityTest {
     @Test
     public void testLargestQuadrupleByte() {
         List<String> expected = Arrays.asList("0xff", "0xff", "0xff", "0x7f");
-        List<Long> numbers = Arrays.asList(0xfffffffL);
+        List<Long> numbers = List.of(0xfffffffL);
 
         assertThat(variableLengthQuantity.encode(numbers)).isEqualTo(expected);
     }
@@ -111,7 +111,7 @@ public class VariableLengthQuantityTest {
     @Test
     public void testSmallestQuintupleByte() {
         List<String> expected = Arrays.asList("0x81", "0x80", "0x80", "0x80", "0x0");
-        List<Long> numbers = Arrays.asList(0x10000000L);
+        List<Long> numbers = List.of(0x10000000L);
 
         assertThat(variableLengthQuantity.encode(numbers)).isEqualTo(expected);
     }
@@ -119,7 +119,7 @@ public class VariableLengthQuantityTest {
     @Test
     public void testArbitraryQuintupleByte() {
         List<String> expected = Arrays.asList("0x8f", "0xf8", "0x80", "0x80", "0x0");
-        List<Long> numbers = Arrays.asList(0xff000000L);
+        List<Long> numbers = List.of(0xff000000L);
 
         assertThat(variableLengthQuantity.encode(numbers)).isEqualTo(expected);
     }
@@ -127,7 +127,7 @@ public class VariableLengthQuantityTest {
     @Test
     public void testMaximum32BitIntegerInput() {
         List<String> expected = Arrays.asList("0x8f", "0xff", "0xff", "0xff", "0x7f");
-        List<Long> numbers = Arrays.asList(0xffffffffL);
+        List<Long> numbers = List.of(0xffffffffL);
 
         assertThat(variableLengthQuantity.encode(numbers)).isEqualTo(expected);
     }
@@ -163,8 +163,8 @@ public class VariableLengthQuantityTest {
     @Disabled("Remove to run test")
     @Test
     public void testDecodeOneByte() {
-        List<String> expected = Arrays.asList("0x7f");
-        List<Long> bytes = Arrays.asList(0x7fL);
+        List<String> expected = List.of("0x7f");
+        List<Long> bytes = List.of(0x7fL);
 
         assertThat(variableLengthQuantity.decode(bytes)).isEqualTo(expected);
     }
@@ -172,7 +172,7 @@ public class VariableLengthQuantityTest {
     @Disabled("Remove to run test")
     @Test
     public void testDecodeTwoBytes() {
-        List<String> expected = Arrays.asList("0x2000");
+        List<String> expected = List.of("0x2000");
         List<Long> bytes = Arrays.asList(0xc0L, 0x0L);
 
         assertThat(variableLengthQuantity.decode(bytes)).isEqualTo(expected);
@@ -181,7 +181,7 @@ public class VariableLengthQuantityTest {
     @Disabled("Remove to run test")
     @Test
     public void testDecodeThreeBytes() {
-        List<String> expected = Arrays.asList("0x1fffff");
+        List<String> expected = List.of("0x1fffff");
         List<Long> bytes = Arrays.asList(0xffL, 0xffL, 0x7fL);
 
         assertThat(variableLengthQuantity.decode(bytes)).isEqualTo(expected);
@@ -190,7 +190,7 @@ public class VariableLengthQuantityTest {
     @Disabled("Remove to run test")
     @Test
     public void testDecodeFourBytes() {
-        List<String> expected = Arrays.asList("0x200000");
+        List<String> expected = List.of("0x200000");
         List<Long> bytes = Arrays.asList(0x81L, 0x80L, 0x80L, 0x0L);
 
         assertThat(variableLengthQuantity.decode(bytes)).isEqualTo(expected);
@@ -199,7 +199,7 @@ public class VariableLengthQuantityTest {
     @Disabled("Remove to run test")
     @Test
     public void testDecodeMaximum32BitInteger() {
-        List<String> expected = Arrays.asList("0xffffffff");
+        List<String> expected = List.of("0xffffffff");
         List<Long> bytes = Arrays.asList(0x8fL, 0xffL, 0xffL, 0xffL, 0x7fL);
 
         assertThat(variableLengthQuantity.decode(bytes)).isEqualTo(expected);
@@ -208,7 +208,7 @@ public class VariableLengthQuantityTest {
     @Disabled("Remove to run test")
     @Test
     public void testCannotDecodeIncompleteSequence() {
-        List<Long> bytes = Arrays.asList(0xffL);
+        List<Long> bytes = List.of(0xffL);
 
         assertThatExceptionOfType(IllegalArgumentException.class)
                 .isThrownBy(() -> variableLengthQuantity.decode(bytes))
@@ -218,7 +218,7 @@ public class VariableLengthQuantityTest {
     @Disabled("Remove to run test")
     @Test
     public void testCannotDecodeIncompleteSequenceEvenIfValueIsZero() {
-        List<Long> bytes = Arrays.asList(0x80L);
+        List<Long> bytes = List.of(0x80L);
 
         assertThatExceptionOfType(IllegalArgumentException.class)
                 .isThrownBy(() -> variableLengthQuantity.decode(bytes))
